<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">grofer</string>
    <string name="grofers">grofers</string>
    <string name="login">Login</string>
    <string name="confirmation">We will send on SMS with a confirmation code to this number</string>
    <string name="_91">+91</string>
    <string name="phone_number">Phone Number</string>
    <string name="next">Next</string>
    <string name="one_touch_login_with_truecaller">One touch login with Truecaller</string>
    <string name="search_products_categories"><![CDATA[Search products & categories]]></string>
    <string name="earliest_slot_tomorrow_7_pm">Earliest slot: Tomorrow 7 PM</string>
    <string name="limited_slots_only">Limited Slots only</string>
    <string name="welcome_to_grofers">welcome to grofers!</string>
    <string name="pune">Pune</string>
    <string name="browse_categories">Browse Categories</string>
    <string name="other_supplies">Other Supplies</string>
    <string name="view_all_categories">View all categories</string>
    <string name="see_more">See more</string>
    <string name="fruits_vegetables"><![CDATA[Fruits & Vegetables]]></string>
    <string name="grofers_spotlight">Grofers Spotlight</string>
    <string name="up_to_69_off">Up to 69% OFF</string>
    <string name="grocery_and_staples">Grocery and Staples</string>
    <string name="pulses_atta_and_others_flours_rice_and_other_grains_dry_fruits_and_nuts">Pulses,Atta and Others Flours,Rice and other Grains,Dry Fruits and Nuts</string>
    <string name="aurangabad_maharastra">Aurangabad, Maharastra</string>
    <string name="todo">TODO</string>
    <string name="fast_delivery">fast delivery</string>
    <string name="lowest_price">lowest price</string>
</resources>