<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/shopCard"
    android:layout_margin="5dp"
    android:layout_width="match_parent"
    android:background="#d3d3d3"
    android:elevation="10dp"
    android:layout_height="wrap_content">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/ivProductImage"
            android:layout_width="140dp"
            android:layout_height="110dp"
            android:scaleType="centerCrop"
            android:contentDescription="TODO" />
        <TextView
            android:id="@+id/tvDiscount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/ivProductImage"
            android:textSize="12sp"
            android:layout_marginStart="6dp"
            android:layout_marginTop="20dp"
            android:textColor="#008000"
            android:text="@string/up_to_69_off"/>
        <TextView
            android:id="@+id/tvType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/ivProductImage"
            android:textSize="14sp"
            android:layout_marginTop="2dp"
            android:layout_marginStart="6dp"
            android:textColor="@color/black"
            android:layout_below="@+id/tvDiscount"
            android:text="@string/grocery_and_staples"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/tvDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/ivProductImage"
            android:textSize="10sp"
            android:layout_marginStart="6dp"
            android:textColor="#c4c3d0"
            android:layout_marginEnd="18dp"
            android:layout_marginTop="2dp"
            android:layout_below="@+id/tvType"
            android:text="@string/pulses_atta_and_others_flours_rice_and_other_grains_dry_fruits_and_nuts"
            android:textStyle="bold"/>
    </RelativeLayout>
</androidx.cardview.widget.CardView>